Fix 1px jumping of menu items and cells on focus; don't scroll window to cell's input field when output field is clicked.

--- a/IPython/frontend/html/notebook/static/css/notebook.css
+++ b/IPython/frontend/html/notebook/static/css/notebook.css
@@ -35,6 +35,7 @@ span#notebook_name {
 }
 
 .ui-menu .ui-menu-item a {
+    border: 1px solid transparent;
     padding: 2px 1.6em;
 }
 
@@ -111,6 +112,18 @@ div#pager {
     padding: 15px;
     overflow: auto;
     display: none;
+}
+
+/* .ui-widget-content is a jQuery class applied to the focused cell. */
+div.ui-widget-content {
+    border: 1px solid #aaa;
+/* We do our own highlighting of the active element using the border above, so
+ * disable the one jQuery draws using outline. */
+    outline: none;
+}
+
+.cell {
+    border: 1px solid transparent;
 }
 
 div.cell {
